--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet" />
     <title>Vite + React + TS</title>
   </head>
-  <body style="background: url('/public/assets/bg.png') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+  <body style="background: url('/assets/bg.png') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
